--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/Menon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="嗚呼──！！大家好我是白湯！！ 每天督促自己不要亂ㄘ毒的個人勢VTUBER" />
+    <meta name="keywords" content="麵音白湯, MenonPaitan" />
+    <meta name="author" content="int" />
     <title>麵音白湯 MenonPaitan</title>
   </head>
   <body>
